added timestamp sending with zeromq